[package]
name = "tiktoken-ruby"
version = "0.3.3+f19feec"
edition = "2021"
rust-version = "1.57.0"

[lib]
name = "_tiktoken"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

# tiktoken dependencies
fancy-regex = "0.10.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"

[profile.release]
incremental = true
